--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+build/
+out/
+
+# Temporary files
+*.tmp
+*.temp
+
+# OS generated files
+Thumbs.db
