feat: Add comprehensive admin dashboard with product management
- Add password-protected admin authentication system
- Create complete admin dashboard with product CRUD operations
- Add product management forms with sizes, colors, and pricing
- Implement admin utilities in useSupabase hook
- Add admin access button to footer
- Set up admin routing and page structure
- Add environment variable for admin password configuration

Features:
- Add/edit/delete products with full details
- Manage product sizes, colors, and categories
- Analytics dashboard with product statistics
- Responsive design with modern UI components
- Error handling and form validation

--- a/env.example
+++ b/env.example
@@ -11,6 +11,9 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 # Optional: Service Role Key (for server-side operations only)
 # VITE_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
+# Admin Configuration
+VITE_ADMIN_PASSWORD=PASS
+
 # API Configuration
 VITE_API_BASE_URL=https://api.b3fashion.com
 
