--- a/env.example
+++ b/env.example
@@ -8,6 +8,10 @@ VITE_APP_VERSION=1.0.0
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# Razorpay Configuration
+VITE_RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+
 # Optional: Service Role Key (for server-side operations only)
 # VITE_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
